--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="full">
-                    <a class="logo" href="index.html"><img src="{% static 'images/logo.png' %}" alt="#"/></a>
+                    <a class="logo" href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" alt="#"/></a>
                 </div>
             </div>
             <div class="col-md-9">
@@ -23,8 +23,24 @@
                                     src="{% static 'images/location_icon.png' %}" alt="#"><a href="#">104 New york ,
                                 USA</a>
                             </li>
-                            <li class="button_user"><a class="button active" href="#">Login</a><a class="button"
-                                                                                                  href="#">Register</a>
+                            <li class="button_user">
+                                {% if not request.user.is_authenticated %}
+                                    <a class="button " href="{% url 'account:client-login' %}">Login</a>
+                                    <a class="button" href="{% url 'account:client-creation' %}">Register</a>
+                                {% else %}
+                                    <div class="dropdown">
+                                        <button class="btn btn-secondary btn-sm " type="button"
+                                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account
+                                        </button>
+                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="background-color: black; width: 50%">
+                                            <a class="button btn-sm" href="{% url 'account:client-update' request.user.id %}">Profile</a>
+                                            <a class="button btn-sm" href="{% url 'account:client-addresses' request.user.id %}">Addresses</a>
+                                             <a class="button btn-sm" href="{% url 'account:client-logout' %}">Logout</a>
+                                        </div>
+                                    </div>
+
+
+                                {% endif %}
                             </li>
                             <li><img style="margin-right: 15px;" src="{% static 'images/search_icon.png' %}" alt="#">
                             </li>
