--- a/templates/index.html
+++ b/templates/index.html
@@ -5,35 +5,7 @@
     <div class="wrapper">
         <!-- end loader -->
 
-        <div class="sidebar">
-            <!-- Sidebar  -->
-            <nav id="sidebar">
-
-                <div id="dismiss">
-                    <i class="fa fa-arrow-left"></i>
-                </div>
-
-                <ul class="list-unstyled components">
-
-                    <li class="active">
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="recipe.html">Recipe</a>
-                    </li>
-                    <li>
-                        <a href="blog.html">Blog</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-
-            </nav>
-        </div>
+        {% include 'includes/sidebar.html' %}
 
         <div id="content">
             <!-- header -->
@@ -119,101 +91,24 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="owl-carousel owl-theme">
-
-                                        <div class="item">
-                                            <div class="product_blog_img">
-                                                <img src="{% static 'images/rs1.png' %}" alt="#"/>
+                                        {% for food in foods %}
+                                            <div class="item">
+                                                <div class="product_blog_img">
+                                                    <img src="{{ food.image.url }}" alt="#"/>
+                                                </div>
+                                                <div class="product_blog_cont">
+                                                    <h3>{{ food.name }}</h3>
+                                                    <h4><span class="theme_color">$</span>{{ food.price }}</h4>
+                                                </div>
                                             </div>
-                                            <div class="product_blog_cont">
-                                                <h3>Homemade</h3>
-                                                <h4><span class="theme_color">$</span>10</h4>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="product_blog_img">
-                                                <img src="{% static 'images/rs2.png' %}" alt="#"/>
-                                            </div>
-                                            <div class="product_blog_cont">
-                                                <h3>Noodles</h3>
-                                                <h4><span class="theme_color">$</span>20</h4>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="product_blog_img">
-                                                <img src="{% static 'images/rs3.png' %}" alt="#"/>
-                                            </div>
-                                            <div class="product_blog_cont">
-                                                <h3>Egg</h3>
-                                                <h4><span class="theme_color">$</span>30</h4>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="product_blog_img">
-                                                <img src="{% static 'images/rs4.png' %}" alt="#"/>
-                                            </div>
-                                            <div class="product_blog_cont">
-                                                <h3>Sushi Dizzy</h3>
-                                                <h4><span class="theme_color">$</span>40</h4>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="product_blog_img">
-                                                <img src="{% static 'images/rs5.png' %}" alt="#"/>
-                                            </div>
-                                            <div class="product_blog_cont">
-                                                <h3>The Coffee Break</h3>
-                                                <h4><span class="theme_color">$</span>50</h4>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="product_blog_img">
-                                                <img src="{% static 'images/rs1.png' %}" alt="#"/>
-                                            </div>
-                                            <div class="product_blog_cont">
-                                                <h3>Homemade</h3>
-                                                <h4><span class="theme_color">$</span>10</h4>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="product_blog_img">
-                                                <img src="{% static 'images/rs2.png' %}" alt="#"/>
-                                            </div>
-                                            <div class="product_blog_cont">
-                                                <h3>Noodles</h3>
-                                                <h4><span class="theme_color">$</span>20</h4>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="product_blog_img">
-                                                <img src="{% static 'images/rs3.png' %}" alt="#"/>
-                                            </div>
-                                            <div class="product_blog_cont">
-                                                <h3>Egg</h3>
-                                                <h4><span class="theme_color">$</span>30</h4>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="product_blog_img">
-                                                <img src="{% static 'images/rs4.png' %}" alt="#"/>
-                                            </div>
-                                            <div class="product_blog_cont">
-                                                <h3>Sushi Dizzy</h3>
-                                                <h4><span class="theme_color">$</span>40</h4>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="product_blog_img">
-                                                <img src="{% static 'images/rs5.png' %}" alt="#"/>
-                                            </div>
-                                            <div class="product_blog_cont">
-                                                <h3>The Coffee Break</h3>
-                                                <h4><span class="theme_color">$</span>50</h4>
-                                            </div>
-                                        </div>
-
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
+                            <div class="container" align="center">
+                                <a href="{% url 'menu:menu' %}" class="btn btn-primary" style="text-decoration: none">Menu</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -358,4 +253,5 @@
 
         </div>
     </div>
+
 {% endblock %}
