before create blog app

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 <div class="loader_bg">
     <div class="loader"><img src="{% static 'images/loading.gif' %}" alt=""/></div>
 </div>
-
+{% include 'includes/header.html' %}
 
 {% block content %}
 {% endblock %}
