--- a/menu/templates/menu/manage_orders.html
+++ b/menu/templates/menu/manage_orders.html
@@ -63,8 +63,13 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-48 w3-xxlarge">
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
-                     class="w3-hover-text-green">w3.css</a></p>
+
+    <a href="{% url 'home' %}">Home</a>
+    <a href="{% url 'home' %}">About</a>
+    <a href="{% url 'menu:menu' %}">Recipe</a>
+    <a href="{% url 'home' %}">blog</a>
+    <a href="{% url 'contact_us:contact-us' %}">Contact us</a>
+
 </footer>
 
 <script>
