--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -14,14 +14,13 @@
                         <ul>
                             <li class="dinone">Contact Us : <img style="margin-right: 15px;margin-left: 15px;"
                                                                  src="{% static 'images/phone_icon.png' %}" alt="#"><a
-                                    href="#">987-654-3210</a></li>
+                                    href="#">{{ contact.phone }}</a></li>
                             <li class="dinone"><img style="margin-right: 15px;"
                                                     src="{% static 'images/mail_icon.png' %}"
-                                                    alt="#"><a href="#">demo@gmail.com</a></li>
+                                                    alt="#"><a href="#">{{ contact.email }}</a></li>
                             <li class="dinone"><img
                                     style="margin-right: 15px;height: 21px;position: relative;top: -2px;"
-                                    src="{% static 'images/location_icon.png' %}" alt="#"><a href="#">104 New york ,
-                                USA</a>
+                                    src="{% static 'images/location_icon.png' %}" alt="#"><a href="#">{{ contact.address }}</a>
                             </li>
                             <li><img style="margin-right: 15px;" src="{% static 'images/search_icon.png' %}" alt="#">
                             </li>
